--- a/main.tex
+++ b/main.tex
@@ -81,9 +81,9 @@
 
 % NOTE: ordering in sidebar will mimic the following order
 % date of birth
-\cvbirthday{21/06/1993}
+% \cvbirthday{}
 % short address/location, use \newline if more than 1 line is required
-% \cvaddress{}
+\cvaddress{Milano}
 % phone number
 \cvphone{348 7131298}
 % personal website
@@ -161,8 +161,8 @@
 \cvsection{Istruzione}
 \cvsubsection{Istruzione universitaria}
 \begin{cvtable}[2.5]
-	\cvitem{2017 - attuale}{\textbf{Laurea triennale in informatica}}{Università di Milano-Bicocca}{}
-    \cvitem{2012-2017}{\textbf{Laurea triennale in economia e amministrazione delle imprese}}{Università di Milano-Bicocca}{Voto di laurea: 100/110}
+	\cvitem{2017 - attuale}{\textbf{Laurea di primo livello in informatica}}{Università di Milano-Bicocca}{}
+    \cvitem{2012-2017}{\textbf{Laurea di primo livello in economia e amministrazione delle imprese}}{Università di Milano-Bicocca}{Voto di laurea: 100/110}
 \end{cvtable}
 \cvsubsection{Istruzione secondaria superiore}
 \begin{cvtable}[1.5]
@@ -171,8 +171,8 @@
 
 \cvsection{Esperienza lavorativa}
 \begin{cvtable}[3]
-    \cvitem{2018-2019}{Segretario}{Sede INFN di Milano-Bicocca}{Collaborazione studentensca. Attività di organizzazione e gestione conferenze, adempimento obblighi legali in riferimento alle collaborazioni con gli ospiti}
-	\cvitem{2011}{Commesso}{Libreria Margaroli, Verbania}{Vendita e gestione del magazzino}
+    \cvitem{2018-2019}{Segretario}{Sede INFN di Milano-Bicocca}{Collaborazione studentensca. Attività di organizzazione e gestione conferenze, adempimento obblighi legali in riferimento alle collaborazioni con gli ospiti.}
+	\cvitem{2011}{Commesso}{Libreria Margaroli, Verbania}{Vendita e gestione del magazzino.}
 \end{cvtable}
 
 %\cvsection{Pubblicazioni}
