--- a/main.tex
+++ b/main.tex
@@ -118,8 +118,8 @@
 %		\end{icontable}
 
 	\profilesection{Lingue}
-		\skill{\flag{Italy.png}}{Italiano \quad \textbf{C2}}
-  	    \skill{\flag{GB.png}}{Inglese \quad \textbf{B2}}
+		\skill{\flag{Italy.png}}{Italiano \textbf{C2}}
+  	    \skill{\flag{GB.png}}{Inglese \textbf{B2}}
 
 	\profilesection{Hard Skills}
 		\skill{\includegraphics[scale=0.1]{pics/paradigm.png}}{Conoscenza e uso dei paradigmi di programmazione orientata agli oggetti, logica e funzionale}
@@ -154,8 +154,8 @@
         {\Large\color{black!80} Programmatore, \\ Studente di informatica} \\
     \end{flushleft}
 
-\fcolorbox{white}{gray}{\parbox{\dimexpr\textwidth-2\fboxsep-2\fboxrule}{%
-.....
+\fcolorbox{white}{gray}{\parbox{\dimexpr\textwidth-2\fboxsep-2\fboxrule}{
+\quad
 }}
 
 \cvsection{Istruzione}
