Github link added

--- a/main (ENG).tex
+++ b/main (ENG).tex
@@ -87,9 +87,10 @@
 % phone number
 \cvphone{348 7131298}
 % personal website
-% \cvsite{ }
+\cvsite{https://jacopodeangelis.github.io}
 % email address
 \cvmail{jacopodeangelis.1993@gmail.com}
+\cvcustomdata{\faGithub}{JacopoDeAngelis}
 % pgp key
 % \cvkey{ }{ }
 % any other custom entry
