--- a/main (IT).tex
+++ b/main (IT).tex
@@ -87,9 +87,10 @@
 % phone number
 \cvphone{348 7131298}
 % personal website
-% \cvsite{ }
+\cvsite{https://jacopodeangelis.github.io}
 % email address
 \cvmail{jacopodeangelis.1993@gmail.com}
+\cvcustomdata{\faGithub}{JacopoDeAngelis}
 % pgp key
 % \cvkey{ }{ }
 % any other custom entry
@@ -104,7 +105,7 @@
 	% naming according to ISO 3166-1 alpha-2 country codes
 	\graphicspath{{pics/flags/}}
 
-	% social network accounts incl. proper hyperlinks
+% social network accounts incl. proper hyperlinks
 %	\profilesection{Social Network}
 %		\begin{icontable}{2.5em}{1em}
 %		    % overleaf still not supports Academicons and FontAwesome5 for XeLaTeX, which contain the overleaf %logl...unbelievable...
@@ -113,8 +114,8 @@
 %				}
 %				{}
 %			\social{\faGithub}
-%				{}
-%				{}
+%				{https://github.com/JacopoDeAngelis}
+%				{Github}
 %		\end{icontable}
 
 	\profilesection{Lingue}
