--- a/main (IT).tex
+++ b/main (IT).tex
@@ -172,7 +172,7 @@
 
 \cvsection{Esperienza lavorativa}
 \begin{cvtable}[3]
-    \cvitem{2018-2019}{Segretario}{Sede INFN di Milano-Bicocca}{Collaborazione studentensca. Attività di organizzazione e gestione conferenze, adempimento obblighi legali in riferimento alle collaborazioni con gli ospiti.}
+    \cvitem{2018-2019}{Segretario}{Sede INFN di Milano-Bicocca}{Collaborazione studentesca. Attività di organizzazione e gestione conferenze, adempimento obblighi legali in riferimento alle collaborazioni con gli ospiti.}
 	\cvitem{2011}{Commesso}{Libreria Margaroli, Verbania}{Vendita e gestione del magazzino.}
 \end{cvtable}
 
