Removed profile pic
English version

--- a/main (ENG).tex
+++ b/main (ENG).tex
@@ -71,13 +71,13 @@
 %-------------------------------------------------------------------------------
 %% mandatory information
 % your name
-%\cvname{Jacopo\\De Angelis}
+\cvname{Jacopo\\De Angelis}
 % job title/career
-%\cvjobtitle{Programmatore,\\[0.2em] Studente di informatica}
+\cvjobtitle{Programmatore,\\[0.2em] Studente di informatica}
 
 %% optional information
 % profile picture
-\cvprofilepic{pics/profile.jpg}
+% \cvprofilepic{pics/profile.jpg}
 
 % NOTE: ordering in sidebar will mimic the following order
 % date of birth
@@ -150,14 +150,6 @@
 
 \makefrontsidebar
 
-    \begin{flushleft}
-        {\Huge\color{maincolor}Jacopo De Angelis} \\
-        {\Large\color{black!80} Programmer, CS student} \\
-    \end{flushleft}
-
-\fcolorbox{white}{gray}{\parbox{\dimexpr\textwidth-2\fboxsep-2\fboxrule}{
-\quad
-}}
 
 \cvsection{Education}
 \cvsubsection{University}
