Aggiunta esperienza lavorativa

--- a/main (ENG).tex
+++ b/main (ENG).tex
@@ -164,6 +164,7 @@
 
 \cvsection{Working experience}
 \begin{cvtable}[3]
+	\cvitem{2020 - attuale}{Junior Developer}{A.S. Watson eLab}{Junior Developer. Usage of SAP Hybris platform and Java Spring}
     \cvitem{2018-2019}{Secretary}{INFN office in Milano-Bicocca}{University collaboration. Organisation and management of conferences, fulfillment of legal obligations regarding the collaboration with the INFN guests.}
 	\cvitem{2011}{Vendor}{Bookshop Margaroli, Verbania}{Sales and depot management.}
 \end{cvtable}
